# goit_web_homework_6

./: README.md  create_table.sql  cursor_execute.py  hw_6_instruction.sql  main.py  pyproject.toml
sql_queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
